# backup

./: .env.sample  README.md  pyproject.toml
backup/: cli.py  config.py  icloud.py
backup/backends/: b2.py  base.py  local.py
