[tool.poetry]
name = "backup"
version = "0.1.0"
description = ""
authors = ["Pierce Freeman <pierce@freeman.vc>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
click = "^8.1.3"
icloudpd = "^1.12.0"
boto3 = "^1.26.96"
tqdm = "^4.65.0"
pydantic = "^1.10.6"
python-dotenv = "^1.0.0"

[tool.poetry.scripts]
backup = "backup.cli:main"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
